--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = {version = "1.0.104", features = ["derive"]}
 base64 = "0.11.0"
 log = "0.4.8"
 percent-encoding = "2.1.0"
+itoa = "0.4.4"
+dtoa = "0.4.4"
