--- a/.github/workflows/rust-check-test.yml
+++ b/.github/workflows/rust-check-test.yml
@@ -35,3 +35,18 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  clippy:
+    name: Clippy Lints
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+      - run: rustup component add clippy
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy -- -D warnings
