Make clippy action actually work

--- a/.github/workflows/rust-check-test.yml
+++ b/.github/workflows/rust-check-test.yml
@@ -46,7 +46,7 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
-      - run: rustup component add clippy
+          components: clippy
       - uses: actions-rs/cargo@v1
         with:
           command: clippy -- -D warnings
