--- a/.github/workflows/rust-check-test.yml
+++ b/.github/workflows/rust-check-test.yml
@@ -43,10 +43,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: nightly
-          override: true
           components: clippy
-      - uses: actions-rs/cargo@v1
+          override: true
+      - uses: actions-rs/clippy-check@v1
         with:
-          command: clippy -- -D warnings
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
