--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ log = "0.4.8"
 percent-encoding = "2.1.0"
 itoa = "0.4.4"
 dtoa = "0.4.4"
+flate2 = {version = "1.0.14", features = ["zlib"], default-features=false}
 
 [dev-dependencies.env_logger]
 version = "0.7.1"
