--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 serde = {version = "1.0.104", features = ["derive"]}
 base64 = "0.11.0"
-log = "0.4.8"
+log = {version = "0.4.8", features = ["release_max_level_off"]}
 percent-encoding = "2.1.0"
 itoa = "0.4.4"
 dtoa = "0.4.4"
