--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,11 +3,9 @@ name: coverage
 # Runs tests with coverage and reports the results
 
 on: 
+  pull_request:
   push:
     branches: 
-      - master
-  pull_request:
-    branches:
       - master
 
 jobs:
@@ -16,21 +14,35 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      
+      - name: Install rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2021-07-31
+          profile: minimal
+          toolchain: stable
           override: true
-      - uses: actions-rs/cargo@v1
+          components: llvm-tools-preview
+          
+      - name: Run tests
+        uses: actions-rs/cargo@v1
         with:
           command: test
         env:
-          CARGO_INCREMENTAL: '0'
-          RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-          RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-      - uses: actions-rs/grcov@v0.1
+          RUST_BACKTRACE: 1
+          RUSTFLAGS: -Cinstrument-coverage
+          
+      - name: Install grcov
+        uses: actions-rs/cargo@v1
         with:
-          config: grcov.yml
-      - uses: codecov/codecov-action@v2
+          command: install
+          args: grcov
+
+      - name: Generate coverage report
+        run: grcov . -s . --binary-path ./target/debug/ -t lcov --ignore-not-existing -o ./target/debug/coverage.lcov
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v3
         with:
-          files: report.lcov
+          files: ./target/debug/coverage.lcov
