--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -40,7 +40,7 @@ jobs:
           args: grcov
 
       - name: Generate coverage report
-        run: grcov . -s . --binary-path ./target/debug/ -t lcov --ignore-not-existing -o ./target/debug/coverage.lcov
+        run: grcov . -s src --binary-path ./target/debug/ -t lcov --ignore-not-existing -o ./target/debug/coverage.lcov
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
