Have Thunk leverage generic associated types
To be able to have a Thunk own unprocessed data, we need to be able to
have the ThunkContent::from_unprocessed (now
ThunkProcessor::from_unprocessed) be able to process arbitrarily
borrowed input. This means that the signature of the funciton has to be
fn<'a>(&'a str) -> Output<'a>, where Output<'a> is a GAT.

There are some troubles with GATs causing lifetimes to be invariant,
which is why we now pull in VariantPartialEq as a drop-in replacement
for PartialEq derives.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ percent-encoding = "2.1.0"
 itoa = "0.4.4"
 dtoa = "0.4.4"
 flate2 = {version = "1.0.14", features = ["zlib"], default-features=false}
+variant_partial_eq = { git = "https://github.com/stadust/variant-partial-eq" }
 
 [dev-dependencies]
 # benchmark
