--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ itoa = "1.0.10"
 dtoa = "1.0.9"
 flate2 = {version = "1.0.14", features = ["zlib"], default-features=false}
 variant_partial_eq = { git = "https://github.com/stadust/variant-partial-eq" }
+thiserror = "1.0.51"
 
 [dev-dependencies]
 # benchmark
