Add dash-rs-derive crate
This crate will contain a derive proc-macro for generating the
"internal" presentations of Geometry Dash data structures (which is
currently done via yaml descriptions + build script).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[workspace]
+members = ["dash-rs-derive"]
+
 [package]
 name = "dash-rs"
 version = "0.1.0"
@@ -16,6 +19,7 @@ dtoa = "1.0.9"
 flate2 = {version = "1.0.14", features = ["zlib"], default-features=false}
 variant_partial_eq = { git = "https://github.com/stadust/variant-partial-eq" }
 thiserror = "1.0.51"
+dash-rs-derive = { path = "dash-rs-derive" }
 
 [dev-dependencies]
 # benchmark
