--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ criterion = "0.5.1"
 # Dependencies used by examples
 reqwest = "0.11.17"
 tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}
+serde_json = "1.0.108"
 
 [build-dependencies]
 serde = {version = "1.0.104", features = ["derive"]}
