--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ criterion = "0.5.1"
 reqwest = "0.11.17"
 tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}
 serde_json = "1.0.108"
+pretty_assertions = "1.4.0"
 
 [build-dependencies]
 serde = {version = "1.0.104", features = ["derive"]}
